; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/hhpcomp/chmc/extr_chmc.c__lzx_at_eof.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/hhpcomp/chmc/extr_chmc.c__lzx_at_eof.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.chmcLzxInfo = type { i64, i64, i64, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @_lzx_at_eof to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_lzx_at_eof(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.chmcLzxInfo*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.chmcLzxInfo*
  store %struct.chmcLzxInfo* %5, %struct.chmcLzxInfo** %3, align 8
  %6 = load %struct.chmcLzxInfo*, %struct.chmcLzxInfo** %3, align 8
  %7 = getelementptr inbounds %struct.chmcLzxInfo, %struct.chmcLzxInfo* %6, i32 0, i32 3
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %23, label %10

10:                                               ; preds = %1
  %11 = load %struct.chmcLzxInfo*, %struct.chmcLzxInfo** %3, align 8
  %12 = getelementptr inbounds %struct.chmcLzxInfo, %struct.chmcLzxInfo* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load %struct.chmcLzxInfo*, %struct.chmcLzxInfo** %3, align 8
  %15 = getelementptr inbounds %struct.chmcLzxInfo, %struct.chmcLzxInfo* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  %17 = icmp sge i64 %13, %16
  br i1 %17, label %23, label %18

18:                                               ; preds = %10
  %19 = load %struct.chmcLzxInfo*, %struct.chmcLzxInfo** %3, align 8
  %20 = getelementptr inbounds %struct.chmcLzxInfo, %struct.chmcLzxInfo* %19, i32 0, i32 2
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br label %23

23:                                               ; preds = %18, %10, %1
  %24 = phi i1 [ true, %10 ], [ true, %1 ], [ %22, %18 ]
  %25 = zext i1 %24 to i32
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
